--- a/home/tocopy/.config/hypr/hyprland.conf
+++ b/home/tocopy/.config/hypr/hyprland.conf
@@ -36,6 +36,7 @@ monitor= , 3440x1440@164.90Hz, 0x0, 1
 $terminal = kitty
 $fileManager = nemo
 $menu = rofi -show drun
+$browser = zen-browser
 
 
 #################
@@ -224,8 +225,8 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 #App shortcuts
 
-bind = ALT, 1, exec, librewolf
-bind = ALT SHIFT, 1, exec, librewolf --private-window
+bind = ALT, 1, exec, $browser
+bind = ALT SHIFT, 1, exec, $browser --private-window
 
 #Custom binds
 bind = $mainMod SHIFT, N, exec, ~/.config/Scripts/hyprsunset.sh
