--- a/home/tocopy/.config/kitty/kitty.conf
+++ b/home/tocopy/.config/kitty/kitty.conf
@@ -6,7 +6,7 @@
 # font_family Operator Mono Book
 # bold_font Operator Mono Thick
 # bold_italic_font Operator Mono Medium
-# font_family      Input Mono
+font_family      family="JetBrainsMono Nerd Font"
 italic_font      auto
 bold_font        auto
 bold_italic_font auto
