fixing waybar arch icon

--- a/home/tocopy/.config/hypr/hyprland.conf
+++ b/home/tocopy/.config/hypr/hyprland.conf
@@ -55,7 +55,7 @@ exec-once = exec ~/.config/Scripts/mpvpaper.sh
 exec-once = wl-paste --watch cliphist store
 exec-once = waybar
 exec-once = hyprsunset
-#exec-once = udisksctl mount -b /dev/sda1
+exec-once = udisksctl mount -b /dev/disk/by-label/Hamza\\x20HDD 
 exec-once = fcitx5 -d
 #exec-once = kitty paru
 
